# SPDX-License-Identifier: Apache-2.0

unit_files += {
    'input': 'dump-extensions/openpower-dumps/clear_hostdumps_poweroff.service',
    'output': 'clear_hostdumps_poweroff.service',
}

phosphor_dump_manager_sources += [
    'dump-extensions/openpower-dumps/dump-extensions.cpp',
    'dump-extensions/openpower-dumps/dump_manager_openpower.cpp',
    'dump-extensions/openpower-dumps/system_dump_entry.cpp',
    'dump-extensions/openpower-dumps/resource_dump_entry.cpp',
    'dump-extensions/openpower-dumps/op_dump_util.cpp',
    'dump-extensions/openpower-dumps/dump_entry_factory.cpp',
    'dump-extensions/openpower-dumps/openpower_dump_entry.cpp',
]
